:sparkles: amend gateway config

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -19,8 +19,12 @@ spring:
           uri: lb://USER-SERVICE # ???? ??, http://localhost:8000/user ? ???? http://localhost:64412 ? ???
           predicates:
             - Path=/user/** # ?? gateway ??? /user/**? ???? ?? user-service? ?????? ??
-
+            - Method=GET
+          filters:
+            - AddRequestHeader=token, 123456
+            - AddResponseHeader=authenticated, yes
         - id: order-service
           uri: lb://ORDER-SERVICE # ??? ? ??, http://localhost:8000/order ? ???? http://localhost:54412 ? ???
           predicates:
             - Path=/order/** # ?? gateway ??? /order/**? ???? ?? order-service? ?????? ??
+            - Method=GET
