--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -21,10 +21,14 @@ spring:
             - Path=/user/** # ?? gateway ??? /user/**? ???? ?? user-service? ?????? ??
             - Method=GET
           filters:
-            - AddRequestHeader=token, 123456
-            - AddResponseHeader=authenticated, yes
+#            - AddRequestHeader=token, 123456
+#            - AddResponseHeader=authenticated, yes
+            - RewritePath=/user/?(?<segment>.*), /$\{segment}
+            - CustomFilter
         - id: order-service
           uri: lb://ORDER-SERVICE # ??? ? ??, http://localhost:8000/order ? ???? http://localhost:54412 ? ???
           predicates:
             - Path=/order/** # ?? gateway ??? /order/**? ???? ?? order-service? ?????? ??
             - Method=GET
+          filters:
+            - RewritePath=/order/?(?<segment>.*), /$\{segment}
