--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -14,3 +14,9 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, beans
