:memo: amend user service yml

--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -9,6 +9,10 @@ eureka:
   client:
     register-with-eureka: false # 3?
     fetch-registry: false  # 4?
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
 
 # server.port : ?? ??? ??? ???? ??? ??? ????. ?? 8761 ??? ?? ????.
 # spring.application.name : Application ??? ??? ? ???, ??? ?? ???? application.name ?? ????.
