--- a/user/build.gradle
+++ b/user/build.gradle
@@ -32,6 +32,11 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    // jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // h2 database
+    runtimeOnly 'org.h2database:h2'
 }
 
 dependencyManagement {
