--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -4,6 +4,18 @@ server:
 spring:
   application:
     name: user-service
+  datasource:
+    driver: org.h2.Driver
+    url: jdbc:h2:tcp://localhost:8081/test
+    username: sa
+  h2:
+    password:
+    console:
+    enabled: true
+    settings:
+      web-allow-others: true
+    path: /h2-console
+
 
 eureka:
   instance:
