--- a/kafka-practice/config/src/main/resources/application.yml
+++ b/kafka-practice/config/src/main/resources/application.yml
@@ -9,3 +9,4 @@ spring:
       server:
         git:
           uri: https://github.com/nowgnas/spring-cloud-msa.git
+          search-paths: main/kafka-practice
