--- a/kafka-practice/env/application.yml
+++ b/kafka-practice/env/application.yml
@@ -1,13 +1,3 @@
-spring:
-    datasource:
-        url: jdbc:mysql://localhost:3306/kafka?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8
-        username: root
-        password: 1234
-        driver-class-name: com.mysql.cj.jdbc.Driver
-    jpa:
-        hibernate:
-            ddl-auto: none
-        properties:
-            hibernate:
-                format_sql: true
-                default_batch_fetch_size: 100
+default:
+    owner: config-service's git folder
+    content: :) 안녕하세요 각각의 마이크로서비스에서 사용될 데이터입니다. :)
