--- a/kafka-practice/env/user-service-prod.yml
+++ b/kafka-practice/env/user-service-prod.yml
@@ -1,7 +1,6 @@
-prod:
-    message: prod message
 server:
-    port: 74412
+    port: 7000
+
 spring:
     application:
         name: user-service
@@ -15,3 +14,5 @@ eureka:
         fetch-registry: true
         service-url:
             defaultZone: http://localhost:8761/eureka
+dev:
+    message: user dev
