:wrench: amend prod user config

--- a/kafka-practice/env/user-service-dev.yml
+++ b/kafka-practice/env/user-service-dev.yml
@@ -15,4 +15,4 @@ eureka:
         service-url:
             defaultZone: http://localhost:8761/eureka
 dev:
-    message: user dev message change
+    message: user dev message change2
