--- a/kafka-practice/env/user-service-dev.yml
+++ b/kafka-practice/env/user-service-dev.yml
@@ -4,6 +4,11 @@ server:
 spring:
     application:
         name: user-service
+    rabbitmq:
+        host: localhost
+        port: 5672
+        username: guest
+        password: guest
 
 eureka:
     instance:
