--- a/kafka-practice/env/order-service-dev.yml
+++ b/kafka-practice/env/order-service-dev.yml
@@ -2,6 +2,11 @@ server:
     port: 54412
 
 spring:
+    rabbitmq:
+        host: localhost
+        port: 5672
+        username: guest
+        password: guest
     application:
         name: order-service
 
