:wrench: add rabbitmq config

--- a/kafka-practice/kafka-gateway/build.gradle
+++ b/kafka-practice/kafka-gateway/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '2.2.4.RELEASE'
+
 }
 
 dependencyManagement {
