:wrench: add rabbitmq dependency

--- a/kafka-practice/kafka-order/src/main/resources/bootstrap.yml
+++ b/kafka-practice/kafka-order/src/main/resources/bootstrap.yml
@@ -4,3 +4,8 @@ spring:
       uri: http://localhost:8888
       name: order-service
       profile: dev
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, busrefresh
