:bricks: docker compose kafka run success

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -10,3 +10,4 @@ spring:
       server:
         git:
           uri: https://github.com/nowgnas/spring-cloud-msa
+          search-paths: kafka-practice/env
