--- a/kafka-practice/env/order-service-dev.yml
+++ b/kafka-practice/env/order-service-dev.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
     rabbitmq:
-        host: localhost
+        host: host.docker.internal
         port: 5672
         username: guest
         password: guest
@@ -18,4 +18,4 @@ eureka:
         register-with-eureka: true
         fetch-registry: true
         service-url:
-            defaultZone: http://localhost:8761/eureka
+            defaultZone: http://host.docker.internal:8761/eureka
