--- a/kafka-practice/env/user-service-dev.yml
+++ b/kafka-practice/env/user-service-dev.yml
@@ -5,7 +5,7 @@ spring:
     application:
         name: user-service
     rabbitmq:
-        host: localhost
+        host: host.docker.internal
         port: 5672
         username: guest
         password: guest
@@ -18,6 +18,6 @@ eureka:
         register-with-eureka: true
         fetch-registry: true
         service-url:
-            defaultZone: http://localhost:8761/eureka
+            defaultZone: http://host.docker.internal:8761/eureka
 dev:
     message: user dev message change using rabbitmq
