--- a/kafka-practice/kafka-config/src/main/resources/application.yml
+++ b/kafka-practice/kafka-config/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
           uri: https://github.com/nowgnas/spring-cloud-msa.git
           search-paths: kafka-practice/env
     rabbitmq:
-      host: localhost
+      host: host.docker.internal
       port: 5672
       username: guest
       password: guest
