--- a/kafka-practice/kafka-gateway/src/main/resources/application.yml
+++ b/kafka-practice/kafka-gateway/src/main/resources/application.yml
@@ -6,10 +6,13 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://host.docker.internal:8761/eureka
+  instance:
+    leaseExpirationDurationInSeconds: 90
+    leaseRenewalIntervalInSeconds: 30
 spring:
   rabbitmq:
-    host: localhost
+    host: host.docker.internal
     port: 5672
     username: guest
     password: guest
