:bricks: set docker host

--- a/kafka-practice/kafka-discovery/Dockerfile
+++ b/kafka-practice/kafka-discovery/Dockerfile
@@ -1,5 +1,5 @@
 FROM adoptopenjdk:11-hotspot AS builder
-
+WORKDIR /app
 COPY kafka-discovery/gradlew .
 COPY kafka-discovery/gradle gradle
 COPY kafka-discovery/build.gradle .
@@ -9,6 +9,6 @@ RUN chmod +x ./gradlew
 RUN ./gradlew clean bootJar
 
 FROM adoptopenjdk:11-hotspot
-COPY --from=builder build/libs/*.jar app.jar
-
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+WORKDIR /app
+COPY --from=builder /app/build/libs/*.jar app.jar
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
