--- a/kafka-practice/env/user-service-dev.yml
+++ b/kafka-practice/env/user-service-dev.yml
@@ -23,3 +23,5 @@ eureka:
             defaultZone: http://localhost:8761/eureka
 dev:
     message: user dev message change using rabbitmq
+kafka:
+    host: host.docker.internal:9092
