--- a/kafka-practice/env/user-service-dev.yml
+++ b/kafka-practice/env/user-service-dev.yml
@@ -9,6 +9,13 @@ spring:
         port: 5672
         username: guest
         password: guest
+    kafka:
+        bootstrapServers: 172.17.0.2:9092
+        producer:
+        retries: 0
+        acks: 1
+        key-serializer: org.apache.kafka.common.serialization.StringSerializer
+        value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 eureka:
     instance:
