:wrench: config sever host change

--- a/kafka-practice/env/config-service-dev.yml
+++ b/kafka-practice/env/config-service-dev.yml
@@ -5,7 +5,7 @@ spring:
     application:
         name: config-service
     rabbitmq:
-        host: host.docker.internal
+        host: localhost
         port: 5672
         username: guest
         password: guest
