--- a/kafka-practice/kafka-config/src/main/resources/application.yml
+++ b/kafka-practice/kafka-config/src/main/resources/application.yml
@@ -1,10 +1,19 @@
+server:
+  port: 8888
+
 spring:
+  application:
+    name: config-service
+  profiles:
+    active: dev
   cloud:
     config:
       server:
         git:
           uri: https://github.com/nowgnas/spring-cloud-msa.git
           search-paths: kafka-practice/env
-
-server:
-  port: 8888
+    rabbitmq:
+      host: localhost
+      port: 5672
+      username: guest
+      password: guest
