--- a/kafka-practice/kafka-gateway/src/main/resources/bootstrap.yml
+++ b/kafka-practice/kafka-gateway/src/main/resources/bootstrap.yml
@@ -1,3 +1,9 @@
+spring:
+  cloud:
+    config:
+      uri: http://localhost:8888
+      name: gateway-service
+      profile: dev
 management:
   endpoints:
     web:
