--- a/kafka-practice/kafka-order/src/main/resources/bootstrap.yml
+++ b/kafka-practice/kafka-order/src/main/resources/bootstrap.yml
@@ -8,4 +8,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, busrefresh
+        include: refresh, busrefresh, health, info
