--- a/kafka-practice/kafka-user/src/main/resources/bootstrap.yml
+++ b/kafka-practice/kafka-user/src/main/resources/bootstrap.yml
@@ -9,4 +9,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, busrefresh
+        include: refresh, busrefresh, health
